# Redes-Lab1

./: .clang-format  CMakeLists.txt  README.md
include/: crypto.h  decrypt.h  encrypt.h  md5.h  tcp.h  util.h
src/: client.c  crypto.c  decrypt.c  encrypt.c  keygen.c  md5.c  server.c  tcp.c  util.c
